# Quntum-measurment-model

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  GPU-plan.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  README.md  README_IMPLEMENTATION.md  README_SUSCEPTIBILITY.md  SUSCEPTIBILITY_DEPLOYMENT.md  SUSCEPTIBILITY_REPORT.md  WBS_SUSCEPTIBILITY_IMPLEMENTATION.md  docker-compose.gpu.yml  pyproject.toml  pytest.ini  qubit_measurement_simulation.py  qubit_simulation_analysis.ipynb  requirements.txt  run_workflow.sh  sse_qubit.ipynb  sse_qubit.py
JW-sanity-check/: jw_H_XX.py  jw_H_XY.py  jw_sanity_check.py  jw_sanity_check_demo.ipynb
free_fermion/: __init__.py  matrix_commutator_solver.py  run_simulations.ipynb  statistical_model_fit.py
jw_sanity_check/: jw_H_XX_euler.py
krauss_operators/: datatypes.py  krauss_operators_simulation.py
logs/: l48_nightly_orchestrator.sh
notebooks/: CorrelationMatrixSSE.ipynb  jw_sanity_check_demo.ipynb  post_phase3_verification_visualization.ipynb  rust_simulator_demo.ipynb  smoke_test_ninf.ipynb  sse_l_qubit_validation.ipynb  sse_qubit.ipynb
quantum_measurement/: __init__.py  cli.py  rust_simulator.py
rust/: Cargo.toml
rust/src/: lib.rs  measurement.rs  simulator.rs
scripts/: benchmark_gpu_speedup.py  benchmark_rust_vs_python.py  check_parameter_grid.py  debug_weak_measurement.py  estimate_gamma_c.py  generate_analysis_plots.py  generate_final_plots.py  monitor_fig2_progress.py  monitor_long_gpu_benchmark.sh  monitor_z2_calibration.py  plot_gpu_benchmark_progress.py  plot_progress.py  plot_susceptibility.py  plot_z2_progress.py  reproduce_turkeshi_fig2.py  run_gpu_z2_calibration_series.sh  run_l42_stable_fixed_gamma_sweep.py  run_long_gpu_benchmark_campaign.py  run_ninf_scan.py  run_post_phase3_verification.sh  run_susceptibility_scan.py  run_z2_scan.py  smoke_hybrid_backend.py  start_long_gpu_benchmark.sh  start_z2_scan.sh  test_fixed_formula.py  test_new_range.py  test_single_run.py
sse_simulation/: PARALLEL_README.md  demo.ipynb  implementation.md  run_simulation.py  sse.py  sse_simulation.py  sse_simulation_demo.ipynb  sse_wavefunction_simulation.py  test_parallel.py
tests/: README.md  (+23 more)
(+77 files in other folders)
