[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-measurements"
version = "0.1.0"
description = "Monte Carlo simulations for single-qubit weak measurements"
readme = "README.md"
authors = [{name = "Quantum Measurements Contributors"}]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
]

[project.optional-dependencies]
progress = ["tqdm"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]