[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-measurements"
version = "0.1.0"
description = "simulations tools for qubit weak measurements models"
readme = "README.md"
authors = [{name = "Alon Kochol"}]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "pandas",
]

[project.optional-dependencies]
progress = ["tqdm"]

# Flat layout: packages live directly under the repo root
[tool.setuptools.packages.find]
include = ["quantum_measurement*"]