[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "quantum-measurements"
version = "0.2.0"
description = "simulations tools for qubit weak measurements models"
readme = "README.md"
authors = [{name = "Alon Kochol"}]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "pandas",
]

[project.optional-dependencies]
progress = ["tqdm"]

[tool.maturin]
module-name = "quantum_measurement._rust"
manifest-path = "rust/Cargo.toml"
python-packages = ["quantum_measurement"]