[package]
name = "quantum_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
ndarray = "0.15"
rayon = "1.8"
rand = { version = "0.8", features = ["std_rng"] }
num-complex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
